Fix z-index problem for navbar on selected app. Improve classes names for homepage.

--- a/src/pages/homepage/Homepage.scss
+++ b/src/pages/homepage/Homepage.scss
@@ -22,7 +22,12 @@
         margin: auto;
     }
 
-    #appsMainContainer {
+    img {
+        width: 60px;
+        height: 60px;
+    }
+
+    #navbar {
         flex-flow: wrap-reverse !important;
         width: 100%;
     }
@@ -40,37 +45,17 @@
         display: none;
     }
 
-    .appIconContainer {
+    .navbarIconContainer {
         background-color: #1f1e33;
         border-radius: 18px;
         width: 70px;
         height: 70px;
         margin: 25px 20px;
     }
-
-    img {
-        width: 60px;
-        height: 60px;
-    }
 }
 
 @media screen and (min-width: 768px) {
     #HomePage {
-        #appsMainContainer {
-            max-width: 500px;
-        }
-
-        #CalendarIcon {
-            width: 60px;
-            height: 60px;
-        }
-
-        .appIconContainer {
-            width: 90px;
-            height: 90px;
-            margin: 30px 30px;
-        }
-
         header {
             padding-top: 12px;
 
@@ -84,6 +69,21 @@
             width: 80px;
             height: 80px;
         }
+
+        #navbar {
+            max-width: 500px;
+        }
+
+        #CalendarIcon {
+            width: 60px;
+            height: 60px;
+        }
+
+        .navbarIconContainer {
+            width: 90px;
+            height: 90px;
+            margin: 30px 30px;
+        }
     }
 }
 
@@ -94,7 +94,36 @@
     #HomePage {
         justify-content: flex-start;
 
-        #appsMainContainer {
+        main {
+            width: 100%;
+            flex-direction: column;
+            padding: 0 50px;
+
+            h1 {
+                font-size: 24px;
+                margin-bottom: 265px;
+            }
+        }
+
+        header {
+            width: 98.5%;
+            padding-top: 12px;
+            margin-bottom: 20px;
+            z-index: 3;
+
+            img {
+                width: 42px;
+                height: 42px;
+            }
+        }
+
+        img {
+            width: 70px;
+            height: 70px;
+            cursor: pointer;
+        }
+
+        #navbar {
             max-width: 100%;
             padding-bottom: 50px;
         }
@@ -135,14 +164,20 @@
 
         .reducedNavbar {
             top: 10px !important;
+            left: 0;
+            right: 0;
+            margin-left: auto;
+            margin-right: auto;
+            z-index: 4 !important;
+            width: 550px !important;
         }
 
-        .reducedNavbarAppContainer {
+        .reducedNavbarIconsContainer {
             width: 55px !important;
             height: 55px !important;
         }
 
-        .reducedNavbarAppSVG {
+        .reducedNavbarIcons {
             width: 45px;
             height: 45px;
         }
@@ -158,45 +193,15 @@
             padding: 0;
         }
 
-        .appIconContainer {
+        .navbarIconContainer {
             width: 75px;
             height: 75px;
             margin: 0px 26px;
             cursor: pointer;
         }
 
-        .appIconContainer:hover {
+        .navbarIconContainer:hover {
             background-color: #24233b;
-        }
-
-        main {
-            width: 100%;
-            flex-direction: column;
-            padding: 0 50px;
-            z-index: 2;
-
-            h1 {
-                font-size: 24px;
-                margin-bottom: 265px;
-            }
-        }
-
-        header {
-            width: 98.5%;
-            padding-top: 12px;
-            margin-bottom: 20px;
-            z-index: 3;
-
-            img {
-                width: 42px;
-                height: 42px;
-            }
-        }
-
-        img {
-            width: 70px;
-            height: 70px;
-            cursor: pointer;
         }
     }
 }
